Simplify a bit and disable DELETE until model handles it